--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,38 @@
 .navbar-nav a {
   font-size: 18px;
 }
+
+/* MODAL */
+
+.modalContainer {
+  max-width: 600px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.10); 
+}
+
+.fa {
+  cursor: pointer;
+}
+
+.content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+
+.content h2 {
+  font-size: 20px;
+  text-align: center;
+}
